Don't set a parent on sharedpointer mangaed object

Device follows a pattern of being managed in QSharedPointers
At this point having a parent for the purposes of memory management
doesn't help.

The kded class can keep a reference to the device in pendingDevices,
this owns the manager so will drop it's reference after the manager is
gone.

BUG: 423029